--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "phpstan/phpstan": "^0.11.12",
         "symfony/dotenv": "^4.0"
     },
     "config": {
